--- a/experience.html
+++ b/experience.html
@@ -1,11 +1,14 @@
 <html>
-<head>
-    <title>The Best bakery in Kota Bharu</title>
+     <head>
+       <title>About me</title>
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-</head>
+  </head>
+
 <body>
-<h1>The Best Bakery</h1>
+    
+    <h1>Experience</h1>
 
     <a href="index.html">Home</a>
     <a href="biodata.html">About me</a>
@@ -13,7 +16,6 @@
     <a href="education.html">Education</a>
     <a href="myhobby.html">My Hobby</a>
     <a href="contact.html">Contact Me</a>
-    
-</body>
 
+</body>
 </html>
