--- a/contact.html
+++ b/contact.html
@@ -13,5 +13,11 @@
     <a href="contact.html">Contact Me</a>
     <a href="experience.html">My Experience</a>
 
+    <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15868.207704375382!2d102.23888885000001!3d6.123714349999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31b6af903bd5a4e3%3A0xdcaa262ae1e894c3!2sKB%20Mall!5e0!3m2!1sen!2smy!4v1688439518000!5m2!1sen!2smy" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
 </body>
 </html>
+
+
