--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 </head>
 <body>
+
+    <div class="header">
 <h1>The Best Bakery</h1>
 
     <a href="index.html">Home</a>
@@ -13,6 +15,27 @@
     <a href="myhobby.html">My Hobby</a>
     <a href="contact.html">Contact Me</a>
     <a href="experience.html">My Experience</a>
+</div>
+
+<div class="slider">
+    <image src="image/nature-pic-in-forests-wallpaper-3000x2000_42.jpg" width="100%">
+
+<div class="box1">
+    <h1>box 1</h1>
+</div>
+
+<div class="box2">
+    <h1>box 2</h1>
+</div>
+
+<div class="box3">
+    <h1>box 3</h1>
+</div>
+
+<div class="box4">
+    <h1>box 4</h1>
+</div>
+</div>
     
 </body>
 
