--- a/education.html
+++ b/education.html
@@ -1,21 +1,107 @@
 <html>
-     <head>
-       <title>About me</title>
-
+<head>
+  <title> Welcome to My Page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
   </head>
 
 <body>
-
-    <h1>Education</h1>
-
+  <div class="header">
+    <div class="logo-container">
+        <img src="image/UiTM-Logo.png" class="Uitm-logo" alt="UITM Logo">
+    </div>
+    
+    <h1>Education for the Future</h1>
+    <div class="navigation-links">
     <a href="index.html">Home</a>
     <a href="biodata.html">About me</a>
     <a href="education.html">Education</a>
-    <a href="myhobby.html">My Hobby</a>
+    <a href="experience.html">My EXperience</a>
     <a href="contact.html">Contact Me</a>
-    <a href="experience.html">My Experience</a>
+    <a href="skills.html">My Skills</a>
+    <a href="picture.html">My Pictures</a>
 
-</body>
+  </div>
+  </div>
+
+
+
+
+
+
+  <div class="news-heading">
+    <h2><span>&#x1F60A;</span>Quote about knowledge today from Imam Syafie<span>&#x1F60A;</span></h2>
+  </div>
+  <div class="slider5">
+    <h3>“True knowledge is that which benefits oneself or others, not information that is merely memorized.” – Imam Shafi</h3>
+  </div>
+  <div class="box1">
+    <table>
+      <tr>
+        <h2>My Primary School</h2>
+      </tr>
+    </table>
+    <img src="image/sksk.png" width="30%">
+    <p>This is the logo for my Primary School <b><a href="https://ms.wikipedia.org/wiki/Sekolah_Kebangsaan_Sri_Kemunting">Sk Sri Kemunting</a></b>. The Address is at Kg Beoh Gunong 16390 Bachok Kelantan. </p>
+  </div>
+  <div class="box2">
+    <h2>My Secondary School</h2>
+    <img src="image/smk sri gunung.jpg" width="30%">
+    <p>This is my secondary school named <u><i><a href="https://ms.wikipedia.org/wiki/Sekolah_Menengah_Kebangsaan_Sri_Gunung">SMK Sri Gunung</a></i></u>. The address is at <b>Sekolah Menengah Kebangsaan Sri Gunung Bukit Chenda, Gunong, 16390, Bachok Kelantan, Malaysia</b></p>
+  </div>
+  <div class="box3">
+    <h2>Tertiary Education</h2>
+    <img src="image/uitm dihatiku.jpg" width="50%">
+    <p>It is known as <a href="https://www.uitm.edu.my/index.php/en/home">Universiti Teknologi Mara, UiTM</a>. I started studying here when I was 18 years old, and now I'm 22 years old. So, I have studied here for 5 years. I passed my Diploma at UiTM Machang and now continuing my degree study.</p>
+  </div>
+ 
+  <div class="container">
+  <div class="box30">
+      <video controls>
+        <source src="video/Wawasan Setia Warga UiTM 2022.mp4" type="video/mp4">
+      </video>
+  </div>
+  
+  <div class="box31">
+    <table id="centre-table">
+        <tr>
+          <th>Bil</th>
+          <th>Institution</th>
+          <th>Year</th>
+          <th>Achievement</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>SK Sri Kemunting</td>
+          <td>2011</td>
+          <td>UPSR, 4A 1B</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>SMK Sri Gunung</td>
+          <td>2018</td>
+          <td>SPM, 6A 2B 1C</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>UiTM Machang</td>
+          <td>2019</td>
+          <td>Diploma in Banking Studies, 3.5</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>UiTM Kota Bharu</td>
+          <td>2022</td>
+          <td>Degree in Finance, 3.8</td>
+        </tr>
+      </table>
+  </div>
+  
+  </div>
+  </body>
+  <footer>
+    <p>&copy; 2023 Nur Syakhirah Mohd Nordin. All rights reserved.</p>
+    </footer>
 </html>
