--- a/experience.html
+++ b/experience.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
     <title>Welcome to My Page</title>
@@ -37,18 +36,6 @@
         </ul>
     </div>
 
-    <h3>Digi Promoter</h3>
-    <div class="job-container">
-        <div class="image-container">
-            <img src="image/digi promoter.jpg" alt="Promoter">
-        </div>
-        <ul class="bullet-points">
-            <li>Sell the sim cards</li>
-            <li>Persuade people to get Digi services</li>
-            <li>Family of Digi</li>
-        </ul>
-    </div>
-
     <h3>Exco of D'Banquers Club UiTM Machang</h3>
     <div class="job-container">
         <div class="image-container">
@@ -72,6 +59,34 @@
             <li>More Grateful with My Life</li>
         </ul>
     </div>
+
+    <h3>Internship Student at Nasken International Sdn Bhd</h3>
+    <div class="job-container">
+        <div class="image-container">
+            <img src="image/Logo Nasken.jpg" alt="Nasken">
+        </div>
+        <ul class="bullet-points">
+            <li>Responsible for daily reconciliation of income collection from outlets operation</li>
+            <li>Review and prepare of accounting entries for income collection</li>
+            <li>Liaise with retail operations staff on collection issues</li>
+            <li>Checking cash drawer and report sent by staffs</li>
+            <li>Doing Bank Recond at the end of Month</li>
+            <li>Solve Bad-Locks for the previous months accounting report</li>
+            <li>Support manager in the preparation of management reports and analysis for income-related activities</li>
+            <li>Key in daily invoice for Sales in SQL</li>
+            <li>Record all cash inflow transaction in SQL and tally it with payment method</li>
+            <li>Attent to any refund request by customer</li>
+            <li>Checking and Validating Petty Cash Claims</li>
+        </ul>
+    </div>
+    <h3>Part - Time Account Assistant (Account Receivable) at Nasken International Sdn Bhd</h3>
+    <div class="job-container">
+        <ul class="bullet-points">
+            <li>Continue what I am doing during my intership</li>
+        </ul>
+    </div>
+    
+  
     </body>
 
     <footer>
